# torch-amd-setup

./: .gitignore  CHANGELOG.md  README.md  install.bat  install.sh  pyproject.toml  setup_env.py
.github/workflows/: changelog.yml
docs/: lessons-learned.md  troubleshooting.md  tutorial.md
examples/: basic_usage.py
scripts/: update_changelog.py
torch_amd_setup/: __init__.py  __main__.py  detect.py
